# crossformer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  INSTALL.md  Makefile  debug.sbatch  dpt.py  dtw.py  hamer_algo.md  pixi.toml  pyproject.toml  requirements.txt  ruff.toml  run.sbatch  tmp-rast.py  tyrodemo.py
.claude/: settings.json
.github/workflows/: claude.yml  pytest.yaml  ruff-changed.yaml
crossformer/: __init__.py  embody.py
crossformer/cn/: README.md  __init__.py  base.py  dec14_duck.py  device.py  heads.py  model_factory.py  mysweep.yaml  optim.py  rollout.py  train.py  tyrodemo.py  util.py  wab.py
crossformer/cn/dataset/: __init__.py  action.py  dataset.py  mix.py  registry.py  types.py
crossformer/cn/eval/: __init__.py
crossformer/cn/model/: __init__.py  common.py
crossformer/cn/optimizer/: __init__.py
crossformer/cn/rollout/: __init__.py
crossformer/cn/wab/: __init__.py
crossformer/data/: bpnp.py  dataset.py  geometry.py  obs_transforms.py  traj_transforms.py
crossformer/data/arec/: README.md  arec.py  compile.py  generate.py
crossformer/data/grain/: README.md  REFACTOR-NOTES.md  __init__.py  arec.py  builders.py  compile.py  datasets.py  dropout.py  embody.py  generate.py  granary.py  loader.py  metadata.py  pipelines.py  restructure.py  sharding.py  threading.py  transforms.py  utils.py
crossformer/data/oxe/: __init__.py  oxe_dataset_configs.py  oxe_dataset_mixes.py  oxe_standardization_transforms.py
crossformer/data/utils/: data_utils.py  goal_relabeling.py  normalization.py  task_augmentation.py  text_processing.py
crossformer/model/: act_vae.py  config.py  crossformer_model.py  crossformer_module.py  dream.py  load.py
crossformer/model/components/: act_vae_head.py  base.py  (+11 more)
crossformer/run/: _wrappers.py  base_policy.py  rtc_base_policy.py  rtc_policy.py  server.py  train_step.py  wrappers.py  xflow_eval.py
crossformer/utils/: __init__.py  checkpoint_utils.py  deco.py  dtw.py  imaug.py  jax_utils.py  mask_renderer.py  mytyping.py  peace_and_quiet.py  print_util.py  rig.py  slot.py  softras.py  spec.py  train_callbacks.py  train_utils.py  type_checking.py  typing.py  use.py
crossformer/viz/: _oikit.py  dtw_plot.py  flow_pca.py  utils.py
docs/: DESIGN.md  PIXI.md  ZEN.md  batch.md  hamer_algo.md  install.md
docs/opencode/: codebase_insights.md
docs/plans/: 2026-02-11-integration-tests-and-pixi-tasks.md  2026-04-08-key-structure-cleanup-estimate.md
docs/test/: INTEGRATION_TEST_DESIGN.md  integration.md  unit.md
examples/: __init__.py  ex_action_heads_and_flow.py  ex_traj_transforms.py
examples/grain/: __init__.py  ex_builders_module.py  ex_metadata_module.py  ex_pipelines.py  ex_runtime_options.py  ex_transforms_module.py  ex_utils_module.py
examples/model/: __init__.py
log_dir/train/: 0.pt  1.pt  10.pt  100.pt  101.pt  102.pt  103.pt  104.pt  105.pt  106.pt  107.pt  108.pt  109.pt  11.pt  110.pt  111.pt  112.pt  113.pt  114.pt  115.pt  116.pt  117.pt  118.pt  119.pt  12.pt  120.pt  121.pt  122.pt  123.pt  124.pt  125.pt  126.pt  127.pt  128.pt  129.pt  13.pt  130.pt  131.pt  132.pt  133.pt  (+98 more)
roadmap/: opencode_mcp.md
scripts/: bela.py  bench_arec_read.py  big.sbatch  cleanup_wandb.py  debug_dtw.py  dream_inference.py  finetune-og.py  finetune.py  fstime_tfds.py  granary.py  inference.py  load_zarr.py  make_dataset_from_memmap.py  make_dset.py  reformat_arec.py  rollout.py  server.py  server_lift.py  simpler_utils.py  submit.pbs  submit2.pbs  train.py
scripts/configs/: bafl_pretrain_config.py  dec11_stack.py  dec15_stack_hr.py  dec18_duck_hr.py  dec3_v3-liftonly.py  dec3_v3.py  dec6_debug_mano7_viz.py  finetune_config.py  jan24_perciever.py  jan24_stack_j.py  mano_debug_finetune.py  mar11_duck_j.py  mar14_duck.py  nov06_l1_noproprio_multiview.py  nov19_noproprio_multiview.py  nov20_good.py  nov21_good-liftv1_2.py  nov22.5_xall.py  nov23_4views_batch256.py  pretrain_config.py
scripts/debug/: builder.py  chunk.py  compatibility.py  data_grain.py  data_tfds.py  debug-jax.py  debug_viz_callback.py  dropout_xflow.py  flow_viz_pca_dataset.py  fpa_head.py  grain_read_probe.py  import_tree.py  inspect_sweep_sources.py  lift_kp2d.py  perceiver_head.py  rtc_server_compare.py  server_compare.py  server_replay_compare.py  server_viz.py  shapes.py  synth_viz_jaxrenderer.py  tmp.py  validate_embody.py  visualize_data.py  viz_flow.py  xflow_head.py
scripts/environ/: anl.sh  home.sh
scripts/flow_viz/: flow_viz_overlay.py  flow_viz_pca.py  flow_viz_robot.py
scripts/old/: bela.py  finetune-og.py  fstime_tfds.py  rollout.py  server-old.py  server_lift.py  simpler_utils.py  submit.pbs  train.py
scripts/serve/: dream.py
scripts/train/: dream.py  dropout.py  dropout_xflow.py  sweep_dropout.py  xflow.py  xflow_integration.py  xflow_rtc.py
test/: data.py
tests/: AGENTS.md  conftest.py  roadmap.md  test_action_heads.py  test_action_heads_and_flow.py  test_cn_configs.py  test_pr39_restore_canonicalization.py  test_restore_canonicalization.py  test_traj_transforms.py
tests/broken/: conftest.py  test_action_heads_and_flow.py
tests/data/: test_obs_transforms.py
tests/grain/: conftest.py  test_builders_module.py  test_metadata_module.py  test_pipelines.py  test_runtime_options.py  test_transforms_module.py  test_utils_module.py
tests/integration/: conftest.py  demo_denoise_plot_callback.py  demo_flow_matching_8d.py  helpers.py  test_checkpoint.py  test_config.py  test_eval.py  test_fd_limit_multidataset.py  test_fwd.py  test_grain_pipeline.py  test_keyframe.py  test_proj.py  test_save_callback_crossformer.py  test_train_step.py  test_viz_callback.py  test_viz_dummy.py
tests/unit/: test_action_heads.py  test_bodypart_norm_mask.py  test_embody_vocab.py  test_hist_viz_callback.py  test_imports.py  test_jax_flax.py  test_losses.py  test_merge.py  test_metadata_stats.py  test_perceiver_io.py  test_save_callback.py  test_slot.py  test_softras.py  test_train_xflow.py  test_viz_callback.py  test_xflow_eval.py  test_xflow_eval_viz.py  test_xflow_guidance_dim.py  test_xflow_head.py  test_xflow_integration_config.py
(+128 files in other folders)
