[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
override-dependencies = [
    "tensorflow>=2.15.0",
    "typeguard>=4.0.0", # compatibility with tensorflow-addons
]
# reinstall-package = ["crossformer"] # ensure package is reinstalled in editable mode

[project]
name = "crossformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=0.12.0",
    "chex>=0.1.85",
    "distrax==0.1.5",
    "einops>=0.6.1",
    "flax>=0.7.5",
    "gym>=0.26",
    "imageio>=2.31.1",
    "jax[cuda12]==0.5.3",
    "jaxlib==0.5.3",
    "ml_collections>=0.1.0",
    "ml_dtypes>=0.2.0",
    "moviepy>=1.0.3",
    "matplotlib",
    "numpy>=1.26",
    "optax>=0.1.5",
    "orbax>=0.1.9",
    "orbax-checkpoint==0.11.20",
    "omegaconf>=2.3.0",
    "plotly>=5.16.1",
    "scipy>=1.12.0",
    "tqdm",
    "transformers==4.43.1",
    "tensorflow>=2.15.0",
    "tensorflow_datasets==4.9.2",
    "tensorflow_graphics==2021.12.3",
    "tensorflow_hub>=0.14.0",
    "tensorflow_probability==0.23.0",
    "tensorflow_text>=2.13.0",
    "tensorstore>=0.1.60",
    "wandb>=0.12.14",
    "tyro>=0.9.1",
    "opencv-python-headless>=4.11.0.86",
    "msgpack>=1.1.1",
    "webpolicy",
    "dlimp",
    "python-box>=7.3.2",
    "augmax>=0.4.1",
    "jax-smi>=1.0.4",
    "more-itertools>=10.8.0",
    # "xgym",
    "torch2jax>=0.1.0",
    "pyroki",
    "jaxlie>=1.5.0",
    "robot-descriptions>=1.21.0",
    "mujoco>=3.3.7",
    "array-record>=0.8.1",
    "readerwriterlock>=1.0.9",
    "grain-nightly>=0.2.14.dev20251027",
    "tfds-nightly>=4.9.9.dev202510250044",
    "xclients",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "hypothesis>=6.139.2",
    "pre-commit==3.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
pyroki = { git = "https://github.com/chungmin99/pyroki", rev = "2272d0ab8bf74026a2c8530b6b6174f3b19dcb97" }
# xgym = { git = "https://github.com/mhyatt000/xgym" }
dlimp = { git = "https://github.com/kvablack/dlimp.git", rev = "main" }
xclients = { git = "https://github.com/mhyatt000/xclients" }

[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
exclude = ["**/build","**/.venv","**/data"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
source = ["crossformer"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
